--- a/styles/mobile-style.css
+++ b/styles/mobile-style.css
@@ -1,4 +1,7 @@
 @media screen and (max-width: 576px) {
+  .navbar {
+    padding-top: -200px;
+  }
   .hero-section {
     flex-direction: column;
   }
@@ -56,9 +59,11 @@
   .tr-box p {
     font-size: 0.5625rem;
   }
+
   .box-1 {
-    top: 41.25rem;
-    right: 1.25rem;
+    margin-top: 400px;
+    margin-right: -150px;
+    /* right: 1.25rem; */
   }
   .box-2 {
     padding-left: 0.3125rem;
@@ -69,8 +74,11 @@
     height: 2.1875rem;
   }
   .box-2 {
-    top: 53.125rem;
-    right: 12.5rem;
+    /* top: 53.125rem;
+    right: 12.5rem; */
+    margin-top: 340px;
+    margin-right: -250px;
+
     align-items: center;
     gap: 0.625rem;
     justify-content: center;
